feat: wz-32968 agent prompts
